tests/NormalTests/paczka1/small_fuzzy/80741531.err
Error in line 1: bcbRsZVz9 A491 23,7
Error in line 5: LA4A A491 41,0
